--- a/src/components/SEO/components/I18nMeta.astro
+++ b/src/components/SEO/components/I18nMeta.astro
@@ -8,13 +8,13 @@ import { localizePath, getPurePathname } from '@/helpers/i18n-utils';
 
 const { siteUrl, i18n } = Astro.props as Props;
 
-const pathname = Astro.request.url.pathname;
+const pathname = new URL(Astro.request.url).pathname;
 
 const purePath = getPurePathname(pathname);
 ---
 
-{Object.keys(i18n.locales).map((code) => (
-  <link rel="alternate" hreflang={i18n.locales[code]!.htmlLang} href={`${siteUrl}${localizePath(purePath, code)}`} />
+{Object.entries(i18n.locales).map(([code, {htmlLang}]) => (
+  <link rel="alternate" hreflang={htmlLang} href={`${siteUrl}${localizePath(purePath, code)}`} />
 ))}
 
 <link rel="alternate" hreflang="x-default" href={`${siteUrl}${purePath}`} />
