--- a/src/components/PageSection.astro
+++ b/src/components/PageSection.astro
@@ -3,7 +3,7 @@ export interface Props {
   id?: string;
   title?: string;
   subtitle?: string;
-  content?: string;
+  Content?: any;
   contentToBottom?: boolean;
   classes?: string;
 }
@@ -12,10 +12,10 @@ import Container from '@/components/Container.astro';
 
 const SECTION_ITEM_CLASS = 'section-item';
 
-const { id, title, subtitle, content, contentToBottom = false, classes = '' } = Astro.props as Props;
+const { id, title, subtitle, Content, contentToBottom = false, classes = '' } = Astro.props as Props;
 ---
 
-<section id={id} class={`${SECTION_ITEM_CLASS} py-24 lg:py-36 text-center ${classes}`}>
+<section id={id} class={`${SECTION_ITEM_CLASS} scroll-mt-4 py-24 lg:py-36 text-center ${classes}`}>
   <Container>
     {(title || subtitle) && (
       <div class="flex flex-col-reverse">
@@ -23,8 +23,8 @@ const { id, title, subtitle, content, contentToBottom = false, classes = '' } = 
         {subtitle && <div class="divider mb-8 text-4xl font-bold uppercase heading">{title}</div>}
       </div>
     )}
-    {content && !contentToBottom && <div class="mb-18" set:html={content} />}
+    {Content && !contentToBottom && <div class="mb-header-xl"><Content /></div>}
     <slot />
-    {content && contentToBottom && <div class="mt-18" set:html={content} />}
+    {Content && contentToBottom && <div class="mb-header-xl"><Content /></div>}
   </Container>
 </section>
