--- a/src/components/SEO/components/FacebookMeta.astro
+++ b/src/components/SEO/components/FacebookMeta.astro
@@ -54,16 +54,16 @@ if (hasImage) {
     alt = description;
     url = imgUrl;
   } else {
-    alt = image.alt || description;
-    url = image.src;
+    alt = image?.alt || description;
+    url = image?.src || '';
   }
 }
 ---
 
 <meta property="og:locale" content={i18n.locales[locale]!.ogLocale} />
 
-{Object.keys(i18n.locales).filter((code) => code !== locale).map((code) => (
-  <meta property="og:locale:alternate" content={i18n.locales[code]!.ogLocale} />
+{Object.entries(i18n.locales).filter(([code]) => code !== locale).map(([, {ogLocale}]) => (
+  <meta property="og:locale:alternate" content={ogLocale} />
 ))}
 
 <meta property="og:site_name" content={i18n.locales[locale]!.siteShortName} />
@@ -76,6 +76,7 @@ if (hasImage) {
   <meta name="og:image" content={url!} />
   <meta name="og:image:alt" content={alt!} />
 )}
+
 {image?.src && (
   <meta name="og:image:width" content={image.width.toString()} />
   <meta name="og:image:height" content={image.height.toString()} />
@@ -86,4 +87,4 @@ if (hasImage) {
 {fbAppID && <meta property="fb:app_id" content={fbAppID} />}
 
 {socialLinks?.facebook && <meta property="article:publisher" content={socialLinks.facebook.to} />}
-{socialLinks && Object.keys(socialLinks).map((key) => <meta property="og:see_also" content={socialLinks[key]!.to} />)}
+{socialLinks && Object.entries(socialLinks).map(([key, {to}]) => <meta property="og:see_also" content={to} />)}
