--- a/src/components/sections/Contacts.astro
+++ b/src/components/sections/Contacts.astro
@@ -10,7 +10,7 @@ import { fetchContacts } from '@/api/yamls';
 
 //       subClassName="text-center"
 const {
-  section: { id, title, subtitle, html: content },
+  section: { id, title, subtitle, Content },
 } = Astro.props as Props;
 
 const contacts = await fetchContacts();
@@ -21,7 +21,7 @@ const {
 } = contacts;
 ---
 
-<PageSection id={id} title={title} subtitle={subtitle} content={content}>
+<PageSection id={id} title={title} subtitle={subtitle} Content={Content}>
   <ul class="grid gap-6 text-sm md:grid-cols-2 lg:grid-cols-4">
     {phones && <ContactItem icon="phone" to={utils.phoneUrl(phones[0])} title="Phone" text={utils.formatPhone(phones[0])} />}
     <ContactItem icon="whatsapp" to={utils.whatsappUrl(whatsapp)} title="WhatsApp" text={utils.formatPhone(whatsapp)} />
