--- a/src/components/sections/Testimonials.astro
+++ b/src/components/sections/Testimonials.astro
@@ -7,11 +7,11 @@ import PageSection from '../PageSection.astro';
 import TestimonialItem from './TestimonialItem.astro';
 
 const {
-  section: { id, title, subtitle, html: content, items },
+  section: { id, title, subtitle, Content, items },
 } = Astro.props as Props;
 ---
 
-<PageSection id={id} title={title} subtitle={subtitle} content={content} classes="text-center bg-light dark:bg-gray-900" contentToBottom={true}>
+<PageSection id={id} title={title} subtitle={subtitle} Content={Content} classes="text-center bg-light dark:bg-gray-900" contentToBottom={true}>
   <ul class="grid gap-12 lg:grid-cols-3">
     {items?.map((item: SectionItem) => <TestimonialItem item={item} />)}
   </ul>
