--- a/src/components/sections/Gallery.astro
+++ b/src/components/sections/Gallery.astro
@@ -7,27 +7,30 @@ import '@/vendor/photoswipe/photoswipe.css';
 import PageSection from '../PageSection.astro';
 import GalleryItem from './GalleryItem.astro';
 
+const GALLERY_ID = 'gallery--simple';
+
 const {
   section: { id, title, subtitle, Content, items },
 } = Astro.props as Props;
 ---
 <PageSection id={id} title={title} subtitle={subtitle} Content={Content} classes="text-center">
-  <div id="gallery--simple" class="pswp-gallery grid gap-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-6">
+  <div id={GALLERY_ID} class="pswp-gallery grid gap-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-6">
     {items?.filter(({image}) => image?.src).map((item) => <GalleryItem item={item} />)}
   </div>
 </PageSection>
 
-<script>
+<script define:vars={{ GALLERY_ID }}>
   import PhotoSwipeLightbox from '@/vendor/photoswipe/photoswipe-lightbox.esm.js';
-
+  // import DOMPurify from 'dompurify';
   if (window.trustedTypes && window.trustedTypes.createPolicy) {
     window.trustedTypes.createPolicy('default', {
-      createHTML: (string) => string
+      createHTML: (string) => string,
+      // createHTML: (string) => DOMPurify.sanitize(string, {RETURN_TRUSTED_TYPE: true}),
     });
   }
 
   const lightbox = new PhotoSwipeLightbox({
-    gallery: '#gallery--simple',
+    gallery: `#${GALLERY_ID}`,
     children: 'a',
     pswpModule: () => import('@/vendor/photoswipe/photoswipe.esm.js'),
   });
