--- a/src/components/sections/Gallery.astro
+++ b/src/components/sections/Gallery.astro
@@ -22,12 +22,19 @@ const {
 <script define:vars={{ GALLERY_ID }}>
   import PhotoSwipeLightbox from '@/vendor/photoswipe/photoswipe-lightbox.esm.js';
   // import DOMPurify from 'dompurify';
+  /**
+   * https://stackoverflow.com/questions/62081028/this-document-requires-trustedscripturl-assignment
+   */
+  /*
   if (window.trustedTypes && window.trustedTypes.createPolicy) {
     window.trustedTypes.createPolicy('default', {
       createHTML: (string) => string,
       // createHTML: (string) => DOMPurify.sanitize(string, {RETURN_TRUSTED_TYPE: true}),
+      createScriptURL: string => string, // warning: this is unsafe!
+      createScript: string => string, // warning: this is unsafe!
     });
   }
+  */
 
   const lightbox = new PhotoSwipeLightbox({
     gallery: `#${GALLERY_ID}`,
