--- a/src/components/sections/Testimonials.astro
+++ b/src/components/sections/Testimonials.astro
@@ -11,8 +11,9 @@ const {
 } = Astro.props as Props;
 ---
 
-<PageSection id={id} title={title} subtitle={subtitle} Content={Content} classes="text-center bg-light dark:bg-gray-900" contentToBottom={true}>
-  <ul class="grid gap-12 lg:grid-cols-3">
+<PageSection id={id} title={title} subtitle={subtitle} classes="text-center bg-light dark:bg-gray-900">
+  <ul class="mb-18 grid gap-12 lg:grid-cols-3">
     {items?.map((item: SectionItem) => <TestimonialItem item={item} />)}
   </ul>
+  <Content />
 </PageSection>
