--- a/src/components/PageSection.astro
+++ b/src/components/PageSection.astro
@@ -3,8 +3,6 @@ export interface Props {
   id?: string;
   title?: string;
   subtitle?: string;
-  Content?: any;
-  contentToBottom?: boolean;
   classes?: string;
 }
 
@@ -12,7 +10,7 @@ import Container from '@/components/Container.astro';
 
 const SECTION_ITEM_CLASS = 'section-item';
 
-const { id, title, subtitle, Content, contentToBottom = false, classes = '' } = Astro.props as Props;
+const { id, title, subtitle, classes = '' } = Astro.props as Props;
 ---
 
 <section id={id} class={`${SECTION_ITEM_CLASS} scroll-mt-4 py-24 lg:py-36 text-center ${classes}`}>
@@ -23,8 +21,6 @@ const { id, title, subtitle, Content, contentToBottom = false, classes = '' } = 
         {subtitle && <div class="divider mb-8 text-4xl font-bold uppercase heading">{title}</div>}
       </div>
     )}
-    {Content && !contentToBottom && <div class="mb-header-xl"><Content /></div>}
     <slot />
-    {Content && contentToBottom && <div class="mb-header-xl"><Content /></div>}
   </Container>
 </section>
