--- a/src/components/sections/ServiceItem.astro
+++ b/src/components/sections/ServiceItem.astro
@@ -3,24 +3,36 @@ export interface Props {
   item: SectionItem;
 }
 
-import getImagePath from '@/helpers/getImagePath';
-// import Image from '@/components/images/Image.astro';
 import Image from 'astro-imagetools';
+// import Image from '@/components/images/Image.astro';
+import getImagePath from '@/helpers/getImagePath';
+import getImageFormats from '@/helpers/getImageFormats';
 
 const { item: { title, content, image } } = Astro.props as Props;
 //    <Image src={getImagePath(image.src)} alt={image.alt} classes="mb-4" imgClasses="w-full h-full max-w-full object-cover" caption={image.caption} />
 
 ---
 
-<div class="text-center">
+<li class="service-item">
   {image?.src && (
     <Image
-      src={'/' + getImagePath(image.src)}
+      src={getImagePath(image.src)}
       alt={image.alt}
       layout="fullWidth"
       loading="lazy"
+      format={getImageFormats() as unknown as []}
     />
    )}
   <h3 class="mb-4">{title}</h3>
   <p>{content}</p>
-</div>
+</li>
+
+<style is:global>
+  .service-item {
+    @apply text-center;
+
+    .astro-imagetools-picture {
+      @apply mb-4;
+    }
+  }
+</style>
